--- a/site2/style.css
+++ b/site2/style.css
@@ -1,30 +1,16 @@
-/* Más práticas de uso: inline e internal */
-
-body {
-    font-weight: 400;
-    font-family: Lato, Helvetica, sans-serif;
-    font-size: 15px;
-    line-height: 2.2rem;
-    color: #818181;
-    margin: 0;
+header p {
+    color: #fff;
 }
 
-header {
-    background-color: #f4511e;
-}
-
-section, footer {
-    margin: 40px;
-}
-
-h1 {
+h1{
     font-size: 63px;
     color: white;
-    padding: 15px;
-    text-align: center;
 }
+
 
 h2 {
     font-size: 24px;
     text-transform: uppercase;
+    color: #303030;
+    font-weight: 600;
 }
