--- a/site2/style.css
+++ b/site2/style.css
@@ -1,7 +1,3 @@
-header p {
-    color: #fff;
-}
-
 h1{
     font-size: 63px;
     color: white;
@@ -9,8 +5,13 @@ h1{
 
 
 h2 {
-    font-size: 24px;
-    text-transform: uppercase;
+    font-size: 54px;
     color: #303030;
     font-weight: 600;
+}
+
+.carousel-caption h5{
+    font-size: 80px;
+    color: #ffc107;
+    text-shadow: 2px 2px 2px black;
 }
